--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10660,3 +10660,480 @@ a.text-dark:focus {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+body {
+  color: #000;
+}
+
+.body-with-nav {
+  padding-top: 55px;
+  /* Approx height of navbar */
+  padding-bottom: 55px;
+}
+
+main.container {
+  position: relative;
+}
+
+small,
+.invalid-feedback {
+  font-size: 90%;
+}
+
+.skip-link:focus {
+  display: block;
+  position: absolute;
+  top: 65px;
+  left: 10px;
+  padding: 1rem;
+  background-color: #fff;
+  z-index: 10000;
+}
+
+.breadcrumb,
+.breadcrumb-item {
+  display: inline-block !important;
+  background-color: transparent;
+  padding: 0;
+}
+
+.breadcrumb-wrap .svg-icon {
+  width: 24px;
+  height: 24px;
+  /*margin-top: -2px;
+  margin-bottom: -2px;*/
+  margin-right: 3px;
+}
+
+a.btn {
+  text-decoration: none;
+}
+
+.text-faded {
+  color: #888;
+}
+
+.indented-block {
+  display: block;
+  padding-left: 1rem;
+}
+
+.alert .svg-icon {
+  margin-right: 4px;
+}
+
+.alerts.global:empty {
+  display: none;
+}
+
+body.loading-screen {
+  /*overflow: hidden;*/
+}
+
+.loading-overlay.global,
+.loading-message.global {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+body.loading-screen .loading-overlay.global,
+body.loading-screen .loading-message.global {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading-overlay.global {
+  background-color: #000;
+  opacity: 0.5;
+  z-index: 9998;
+}
+
+.loading-message.global {
+  z-index: 9999;
+}
+
+.loading-message.global > div {
+  background-color: #fff;
+  padding: 2rem 3rem;
+}
+
+.loading-message.local {
+  text-align: center;
+  display: none;
+}
+
+.loading-message img {
+  width: 32px;
+  height: 32px;
+  margin-right: 7px;
+}
+
+.svg-icon {
+  width: 32px;
+  height: 32px;
+  display: inline-block;
+  /*vertical-align: top;
+  margin: -6px -1px -6px -7px;*/
+  vertical-align: middle;
+  margin: -4px 0 0 -2px;
+}
+
+.navbar a {
+  text-decoration: none !important;
+}
+
+.navbar-right > * {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.navbar-collapse a.text-primary:link,
+.navbar-collapse a.text-primary:visited {
+  color: #68ade5 !important;
+}
+
+.navbar-collapse a.text-primary:hover,
+.navbar-collapse a.text-primary:focus,
+.navbar-collapse a.text-primary:active {
+  color: #75b4e7 !important;
+}
+
+.page-header {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.page-help-link {
+  position: absolute;
+  right: 15px;
+  top: -28px;
+}
+
+.dropdown-toggle::after {
+  vertical-align: middle;
+}
+
+.grid .table th {
+  border-bottom-width: 0;
+  border-right: 1px solid #ced4da;
+  border-top-color: #ced4da;
+  border-bottom: 1px solid #999;
+}
+
+.grid .table th:first-of-type {
+  border-left: 1px solid #ced4da;
+}
+
+.grid .table th > a {
+  display: block;
+  margin: -0.75rem;
+  /* For edge-to-edge fill */
+  padding: 0.75rem;
+}
+
+.grid .table th > a > .arrow.dsc {
+  border-top-color: #3490dc;
+}
+
+.grid .table th > a > .arrow.asc {
+  border-bottom-color: #3490dc;
+}
+
+.grid .table th > a:hover,
+.grid .table th > a:focus,
+.grid .table th > a:active,
+.grid .table th > a.active {
+  /*background-color: #343a40;*/
+  background-color: #999;
+  color: #fff;
+}
+
+.grid .table th > a:hover > .arrow.dsc,
+.grid .table th > a:focus > .arrow.dsc,
+.grid .table th > a:active > .arrow.dsc,
+.grid .table th > a.active > .arrow.dsc {
+  border-top-color: #fff;
+}
+
+.grid .table th > a:hover > .arrow.asc,
+.grid .table th > a:focus > .arrow.asc,
+.grid .table th > a:active > .arrow.asc,
+.grid .table th > a.active > .arrow.asc {
+  border-bottom-color: #fff;
+}
+
+.grid-action-item {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 3px;
+}
+
+td.grid-alert {
+  height: 475px;
+}
+
+td.grid-alert {
+  font-size: 2em;
+  vertical-align: middle;
+  text-align: center;
+  margin-top: 160px;
+}
+
+@media only screen and (max-width: 992px) {
+  .grid-action-item {
+    margin: 0 6px 0 0;
+  }
+
+  .btn-group.pagination {
+    flex-wrap: wrap;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  /* Force table to not be like tables anymore */
+
+  .no-more-tables table,
+  .no-more-tables thead,
+  .no-more-tables tbody,
+  .no-more-tables th,
+  .no-more-tables td,
+  .no-more-tables tr {
+    display: block;
+  }
+
+  /* Hide table headers (but not display: none;, for accessibility) */
+
+  .no-more-tables thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+
+  .no-more-tables tr {
+    border: 1px solid #ccc;
+  }
+
+  .no-more-tables td {
+    /* Behave  like a "row" */
+    border: none;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    padding-left: 50%;
+    white-space: normal;
+    text-align: left;
+    min-height: 48px;
+    /* In case it's empty */
+  }
+
+  .no-more-tables td:before {
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    /*top: 6px;
+    left: 6px;*/
+    top: 0;
+    left: 0;
+    width: 45%;
+    /*padding-right: 10px;*/
+    padding: 0.75rem 0 0.75rem 0.75rem;
+    white-space: nowrap;
+    text-align: left;
+    font-weight: 700;
+  }
+
+  /* Label the data */
+
+  .no-more-tables td:before {
+    content: attr(data-title);
+  }
+}
+
+th.active .arrow {
+  opacity: 1;
+}
+
+.arrow {
+  display: inline-block;
+  vertical-align: middle;
+  width: 0;
+  height: 0;
+  margin-left: 5px;
+  /*opacity: 0.66;*/
+}
+
+/* These draw the arrows */
+
+.arrow.asc {
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid black;
+}
+
+.arrow.dsc {
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid black;
+}
+
+.form-control-label {
+  font-weight: 700;
+}
+
+.card .card-header {
+  font-weight: 700;
+  color: #000;
+}
+
+.card .col-form-label {
+  color: #000;
+  font-weight: 700;
+}
+
+.form-check-label:hover {
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 576px) {
+  .form-control.w-75,
+  .form-control.w-50,
+  .form-control.w-25 {
+    width: 100% !important;
+  }
+}
+
+.is-invalid .form-control {
+  border-color: #e3342f !important;
+}
+
+.is-valid .form-control {
+  border-color: #38c172 !important;
+}
+
+.invalid-feedback,
+.valid-feedback {
+  display: inline-block !important;
+}
+
+.form-text,
+.invalid-feedback,
+.valid-feedback {
+  margin-top: 0.5rem;
+}
+
+.form-text + .invalid-feedback,
+.form-text + .valid-feedback {
+  margin-top: 0;
+}
+
+.is-invalid .form-check-input,
+.is-invalid .form-check-label,
+.is-invalid .form-control-label,
+.is-invalid .invalid-feedback,
+.is-invalid .form-text {
+  color: #e3342f !important;
+}
+
+.is-valid .form-check-input,
+.is-valid .form-check-label,
+.is-valid .form-control-label,
+.is-valid .invalid-feedback,
+.is-valid .form-text {
+  color: #38c172 !important;
+}
+
+.col-form-label {
+  color: #888;
+}
+
+.text-only .col-form-label,
+.text-only .form-text {
+  padding: 0 15px;
+  margin: 0;
+}
+
+.text-only .form-text {
+  font-weight: 700;
+  padding: 0 !important;
+}
+
+.has-error .help-block,
+.has-error .control-label,
+.has-error .radio,
+.has-error .checkbox,
+.has-error .radio-inline,
+.has-error .checkbox-inline,
+.has-error.radio label,
+.has-error.checkbox label,
+.has-error.radio-inline label,
+.has-error.checkbox-inline label {
+  color: #a94442;
+}
+
+.has-error .form-control {
+  border-color: #a94442;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.has-error .form-control:focus {
+  border-color: #843534;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ce8483;
+}
+
+.has-error .input-group-addon {
+  color: #a94442;
+  border-color: #a94442;
+  background-color: #f2dede;
+}
+
+.has-error .form-control-feedback {
+  color: #a94442;
+}
+
+.VuePassword__Meter {
+  color: #afafaf;
+  display: block;
+  height: 0.5rem;
+  margin-top: 0.2rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  width: 100%;
+}
+
+.VuePassword__Meter path {
+  stroke: currentColor;
+  stroke-width: 2;
+}
+
+.VuePassword--very-weak {
+  color: #afafaf;
+}
+
+.VuePassword--weak {
+  color: #e61e1e;
+}
+
+.VuePassword--medium {
+  color: #ffa041;
+}
+
+.VuePassword--good {
+  color: #64c84b;
+}
+
+.VuePassword--great {
+  color: #4b9632;
+}
+
+.VuePassword__Message {
+  cursor: default;
+  font-size: 1rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  text-align: right;
+  text-transform: uppercase;
+}
+
