--- a/resources/sass/_cmr.scss
+++ b/resources/sass/_cmr.scss
@@ -165,6 +165,12 @@ body.loading-screen .loading-message.global {
   top: -28px;
 }
 
+.page-help-link {
+  position: absolute;
+  right: 15px;
+  top: -28px;
+}
+
 .dropdown-toggle::after {
   vertical-align: middle;
 }
@@ -349,6 +355,42 @@ th.active .arrow {
   cursor: pointer;
 }
 
+.form-group-standard label {
+  display: block;
+}
+
+.form-group-inline {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 30px;
+}
+.form-group-inline label {
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: 0;
+  margin-right: 5px;
+}
+.form-group-inline > * {
+  vertical-align: middle;
+  margin-bottom: 0;
+}
+
+a.form-group-help > img {
+  /*margin-left: 20px;
+  width: 1.5em;
+  height: 1.5em;*/
+  width: 22px;
+  height: 22px;
+}
+
+a.form-group-help > .help-text {
+  display: none;
+}
+
+.tooltip-inner {
+  text-align: left;
+}
+
 @media only screen and (max-width: map-get($grid-breakpoints, "sm")) {
   // Sizing
   .form-control.w-75,
@@ -389,16 +431,16 @@ th.active .arrow {
 .is-invalid .form-check-input,
 .is-invalid .form-check-label,
 .is-invalid .form-control-label,
-.is-invalid .invalid-feedback,
-.is-invalid .form-text {
+.is-invalid .invalid-feedback/*,
+.is-invalid .form-text*/ {
   color: $red !important;
 }
 
 .is-valid .form-check-input,
 .is-valid .form-check-label,
 .is-valid .form-control-label,
-.is-valid .invalid-feedback,
-.is-valid .form-text {
+.is-valid .invalid-feedback/*,
+.is-valid .form-text*/ {
   color: $green !important;
 }
 // End Field level errors
@@ -416,6 +458,10 @@ th.active .arrow {
 .text-only .form-text {
   font-weight: 700;
   padding: 0 !important;
+}
+
+.trim-last-p p:last-child {
+  margin-bottom: 0;
 }
 
 ///////////////////////////////////////////////////////////////////////////////
