Added pencil icon to pre-input-field, and moved css to _cmr.scss

--- a/resources/sass/_cmr.scss
+++ b/resources/sass/_cmr.scss
@@ -21,6 +21,10 @@ body {
     line-height: 2;
 }
 
+.control-icon {
+    cursor: pointer;
+}
+
 .body-with-nav {
   padding-top: 55px; /* Approx height of navbar */
   padding-bottom: 55px;
